force-app/main/default/objects/NEILON__File_Download_History__c/NEILON__File_Download_History__c.object-meta.xml
<CustomObject>
    <description>Download history of files.</description>
    <label>S3-File Download History</label>
    <nameField>
        <displayFormat>FDH-{0000000000}</displayFormat>
        <label>File Download Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3-File Download History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>