force-app/main/default/objects/NEILON__File_Download_History__c/fields/NEILON__DownloadedBy__c.field-meta.xml
<CustomField>
    <fullName>NEILON__DownloadedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who has accessed the file.</description>
    <label>Accessed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_Download_History</relationshipName>
    <type>Lookup</type>
</CustomField>