force-app/main/default/objects/NEILON__File_Download_History__c/fields/NEILON__DownloadedBy_Email__c.field-meta.xml
<CustomField>
    <fullName>NEILON__DownloadedBy_Email__c</fullName>
    <label>Downloaded By Email(External)</label>
    <type>Email</type>
</CustomField>