force-app/main/default/objects/NEILON__File_Download_History__c/fields/NEILON__DownloadedDate__c.field-meta.xml
<CustomField>
    <fullName>NEILON__DownloadedDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Accessed Date</label>
    <type>DateTime</type>
</CustomField>