force-app/main/default/objects/NEILON__File_Download_History__c/fields/NEILON__File_Version__c.field-meta.xml
<CustomField>
    <fullName>NEILON__File_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>S3-File Version</label>
    <referenceTo>NEILON__File_Version__c</referenceTo>
    <relationshipLabel>S3-File Download History</relationshipLabel>
    <relationshipName>S3_File_Download_History</relationshipName>
    <type>Lookup</type>
</CustomField>