force-app/main/default/objects/NEILON__File_Download_History__c/fields/NEILON__Type__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Download</fullName>
                <default>true</default>
                <label>Download</label>
            </value>
            <value>
                <fullName>Preview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>