force-app/main/default/objects/NEILON__File_Download_History__c/fields/NEILON__User_Type__c.field-meta.xml
<CustomField>
    <fullName>NEILON__User_Type__c</fullName>
    <formula>IF(NEILON__DownloadedBy__r.ContactId != null, &apos;Partner Community Users&apos;, CASE(NEILON__DownloadedBy__r.UserType, &apos;Standard&apos;, &apos;Internal Users&apos;, &apos;Guest&apos;, &apos;Guest Users&apos; ,&apos;Other&apos;))</formula>
    <label>User Type</label>
    <type>Text</type>
</CustomField>